# AsyncServer

./: .gitignore  CMakeLists.txt  README.md
Source/: CMakeLists.txt
Source/include/AsyncServer/: AsyncServer.h
Source/include/SensorMessage/: SensorMessage.h
Source/include/ServerListener/: ServerListener.h
Source/lib/Connection/: CMakeLists.txt
Source/lib/Connection/include/Connection/: Connection.h
Source/lib/Connection/src/: Connection.cpp
Source/src/: AsyncServer.cpp  SensorMessage.cpp
Test/: CMakeLists.txt  ConnectionTests.cpp  SensorMessageTest.cpp  ServerTests.cpp
Test/TestClient/: CMakeLists.txt
Test/TestClient/include/TestClient/: TestClient.h
Test/TestClient/src/: TestClient.cpp
Test/TestUtils/: CMakeLists.txt
Test/TestUtils/include/TestClient/: TestClient.cpp
Test/TestUtils/include/TestListner/: TestListner.cpp
