cmake_minimum_required(VERSION 3.0.0)
project(ConnectionLib CXX)

set(CMAKE_CXX_FLAGS "")
set(CMAKE_EXE_LINKER_FLAGS "")
set(CMAKE_CXX_STANDARD 20)

add_compile_options(
    
    # -Werror
    -Wall
    -Wno-comment
    -Wno-switch
    
    -Wextra
    -Wno-unused-parameter
    
    -Wpedantic
    -Wcast-align
    -Wcast-qual
    
    # -Wconversion
    -Wctor-dtor-privacy
    -Wenum-compare
    -Wfloat-equal
    -Wnon-virtual-dtor
    
    # -Wold-style-cast
    -Woverloaded-virtual
    -Wredundant-decls
    
    # -Wsign-conversion
    -Wsign-promo
    -Wno-unknown-pragmas
)

find_package(Boost 1.74.0 REQUIRED system)

add_library(ConnectionLib STATIC
    include/Connection/Connection.h
    src/Connection.cpp 
)

target_link_libraries(ConnectionLib
    PUBLIC SensorMessageLib
)

target_include_directories(ConnectionLib
    PUBLIC include
)
